update [db]: drop is_question
